// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a button using the default props 1`] = `
<button
  className="
        btn
        btn--primary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;

exports[`renders a button with an icon after the text 1`] = `
<button
  className="
        btn
        btn--primary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M15.8198039,12 L21.2037682,12 L12,22.5185923"
    />
  </svg>
</button>
`;

exports[`renders a button with an icon before the text 1`] = `
<button
  className="
        btn
        btn--primary
        
        
      "
  disabled={false}
>
  <svg
    viewBox="0 0 24 24"
  >
    <path
      d="M15.8198039,12 L21.2037682,12 L12,22.5185923"
    />
  </svg>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;

exports[`renders a disabled button 1`] = `
<button
  className="
        btn
        btn--primary
        
        
      "
  disabled={true}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;

exports[`renders a primary anchor 1`] = `
<a
  className="
        btn
        btn--primary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</a>
`;

exports[`renders a primary button 1`] = `
<button
  className="
        btn
        btn--primary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;

exports[`renders a seconadry anchor 1`] = `
<a
  className="
        btn
        btn--secondary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</a>
`;

exports[`renders a seconadry button 1`] = `
<button
  className="
        btn
        btn--secondary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;

exports[`renders a small button 1`] = `
<button
  className="
        btn
        btn--primary
        
        btn--small
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;

exports[`renders a tertiary anchor 1`] = `
<a
  className="
        btn
        btn--tertiary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</a>
`;

exports[`renders a tertiary button 1`] = `
<button
  className="
        btn
        btn--tertiary
        
        
      "
  disabled={false}
>
  <span
    className="btn__text"
  >
    I am a button
  </span>
</button>
`;
